# affected

./: .affected.toml.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/actions/affected-pr-comment/: README.md  action.yml
.github/workflows/: ci.yml  pages.yml  release.yml
crates/affected-cli/: Cargo.toml
crates/affected-cli/src/: main.rs
crates/affected-cli/tests/: cli.rs
crates/affected-core/: Cargo.toml
crates/affected-core/src/: config.rs  detect.rs  git.rs  graph.rs  lib.rs  runner.rs  types.rs
crates/affected-core/src/resolvers/: bun.rs  cargo.rs  dart.rs  dotnet.rs  elixir.rs  go.rs  gradle.rs  maven.rs  mod.rs  npm.rs  python.rs  sbt.rs  swift.rs  yarn.rs
crates/affected-core/tests/: integration.rs
docs/: next.config.js  package-lock.json  package.json  tailwind.config.js
docs/app/: head.tsx  page.tsx
docs/components/: button.tsx  features.tsx  footer.tsx  header.tsx  hero-image.tsx
docs/components/sections/: build-momentum.tsx  clients.tsx  enjoy-issue-tracking.tsx  homepage-hero.tsx  set-direction.tsx  unlike-any-tool.tsx
docs/lib/: smooth-scroll.ts
docs/styles/: globals.css
python/affected/: pyproject.toml
