[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "affected"
version = "1.0.0"
description = "Detect affected packages. Run only what matters. Language-agnostic monorepo tool."
readme = "../../README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Rani367" }]
keywords = ["monorepo", "testing", "ci", "affected", "workspace"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/Rani367/affected"
Repository = "https://github.com/Rani367/affected"

[project.scripts]
affected = "affected._main:main"
